add new component reset password , also the method of forgot password and reset and update the method add subject and delete subject
